<resources>
    <string name="app_name">宗亲</string>
    <string name="tx_log">LOG</string>
    <string name="tx_web_refresh_hint">正在刷新当前页面</string>
    <string name="menu">菜单</string>
    <string name="tx_menu_copy_link">复制链接</string>
    <string name="tx_copy_success">已复制到粘贴板</string>
    <string name="tx_initsdk_title">第一步 初始化SDK</string>
    <string name="tx_get_appid">点击获取appID和appSign</string>
    <string name="tx_get_appid_guide">获取appID和appSign</string>
    <string name="tx_initsdk">初始化SDK</string>
    <string name="tx_code_demo">代码演示</string>
    <string name="tx_mirror">镜像</string>
    <string name="tx_login_console">登录控制台</string>
    <string name="tx_capture_mirror">预览镜像</string>
    <string name="tx_hardware_decode_describe">开启硬解后，SDK会使用GPU去处理视频解码，会大大减少App对CPU的占用率,
达到省电不发热的效果。</string>
    <string name="tx_hardware_encode_describe">开启硬编后，SDK会使用GPU去处理视频编码，会大大减少App对CPU的占用率,
达到省电不发热的效果。</string>
    <string name="userid_describe">!!!必须保证userID的唯一性。可与app业务后台账号进行关联  userID还能便于ZEGO技术支持帮忙查找定位线上问题  建议定义一个有意义的userID</string>
    <string name="appid_describe">appID 和 appSign 由 ZEGO 分配给各 App。为了安全考虑，建议将 appSign 存储在 App 的业务后台，使用时从后台获取。</string>
    <string name="app_sign_describe">appID 和 appSign 由 ZEGO 分配给各 App。为了安全考虑，建议将 appSign 存储在 App 的业务后台，使用时从后台获取。</string>
    <string name="user_name_describe">userName 只支持长度不超过 256 字节的任意格式字符串</string>
    <string name="room_id_describe">roomID代表一个房间的标识，需要保证房间ID信息的全局唯一，只支持长度不超过 128 byte 的数字，下划线，字母</string>

    <string name="tx_test_env">测试环境</string>
    <string name="tx_init_success">初始化SDK完成</string>
    <string name="tx_init_failure">初始化SDK失败</string>
    <string name="tx_login_room_title">第二步 登录房间</string>
    <string name="tx_login_room">登录房间</string>
    <string name="tx_login_room_guide">登录房间指引</string>
    <string name="tx_login_room_success">登录房间成功</string>
    <string name="tx_login_room_failure">登录房间失败</string>
    <string name="tx_stream_id_cannot_null">streamID不能为空</string>
    <string name="tx_start_publish_title">第三步 开始推流</string>
    <string name="tx_room_id_is_no_null">roomID不能为空</string>
    <string name="stream_id_describe">每个用户的流名必须保持唯一，也就是流名必须全局唯一，SDK推拉流都是基于流ID来标识, 只支持长度不超过 256 byte 的数字，下划线，字母</string>
    <string name="tx_publish_guide">推流文档指引</string>
    <string name="tx_play_guide">拉流文档指引</string>
    <string name="tx_start_publish">发起推流</string>
    <string name="tx_confirm_publish">确认推流</string>
    <string name="tx_mic_state">麦克风</string>
    <string name="tx_camera">摄像头</string>
    <string name="tx_publish_success">推流成功</string>
    <string name="tx_publish_fail">推流失败</string>
    <string name="tx_start_play_title">第三步 开始拉流</string>
    <string name="tx_speaker">扬声器</string>
    <string name="tx_start_play">开始拉流</string>
    <string name="tx_play_success">拉流成功</string>
    <string name="tx_playing">拉流中</string>
    <string name="tx_play_fail">拉流失败</string>
    <string name="tx_common">常用功能</string>
    <string name="play_volume">拉流音量</string>
    <string name="tx_capture_device">修改摄像头采集设备</string>
    <string name="hardware_encode">硬编开关(推流前设置生效)</string>
    <string name="front_facing_camera">前置摄像头</string>
    <string name="tx_set_play_view_mode_failure">设置失败, 请在拉流之后设置</string>
    <string name="tx_current_stream_delete">对方已停止推流</string>

    <string name="share_log">分享日志</string>
    <string name="log">log</string>
    <string name="back">返回</string>
    <string name="share">分享</string>
    <string name="tx_join_live_title">直播连麦</string>
    <string name="tx_refresh_hint">下拉完成刷新房间列表</string>
    <string name="tx_create_room_title">创建房间</string>
    <string name="tx_create_live">创建直播</string>
    <string name="tx_room_list_is_empty">暂无直播房间</string>
    <string name="tx_confirm_start_publish">确定推流</string>
    <string name="tx_doc_link">《进阶功能-直播连麦》</string>
    <string name="tx_joinlive_guide">连麦指引</string>
    <string name="tx_anchor_title">主播</string>
    <string name="tx_audience_title">观众</string>

    <string name="join_live_count_overflow">连麦已满人，此demo只展示三人连麦</string>
    <string name="tx_joinLive">视频连麦</string>
    <string name="tx_end_join_live">结束连麦</string>
    <string name="room_no_publish">该房间没有推流，请刷新房间列表后重试!</string>
    <string name="has_no_textureView">没有空闲的视图了</string>
    <string name="tx_anchor_stoppublish">主播已停止直播</string>


    <string name="has_joined_live">你已连麦</string>

    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="ap_name">日期选择控件</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="app_pengyouquan">朋友圈</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="vpfist">首页</string>
    <string name="vpss">私塾</string>
    <string name="vpfdorcter">找医生</string>
    <string name="vpzqq">宗亲圈</string>
    <string name="vpsc">商城</string>
    <string name="vpzp">族谱</string>
    <string name="vpmy">我的</string>
    <string name="brithday">一路走来,感谢相伴!</string>
    <string name="titless">这是标题</string>
    <string name="settings">设置</string>
    <!--dialog-->
    <string name="dialog_title">语言切换</string>
    <string name="dialog_msg">请选择你要切换的语言</string>
    <string name="dialog_positive">简体中文</string>
    <string name="dialog_negative">繁体中文</string>
    <string name="toast_set_ch">设置成简体</string>
    <string name="toast_set_en">设置成繁体</string>
    <string name="tab_gz">关注</string>
    <string name="tab_remen">热门</string>
    <string name="tab_fax">发现</string>
    <string name="tab_kechentg">课程</string>
    <string name="logingd">加载中...</string>
    <string name="shenhe">资格审核中请耐心等待</string>
    <string name="chenggong">申请成功</string>
    <string name="zbsq">主播申请</string>
    <string name="ktkc">开通主播需要扣除</string>
    <string name="iskt">积分是否立即开通主播</string>
    <string name="back_qx">取消</string>
    <string name="shuor">确定</string>
    <string name="nx_dd">主播申请中,请耐心等待</string>
    <string name="wsm">未实名认证</string>
    <string name="shenhezhong">审核中</string>
    <string name="shweitg">认证未通过请重新认证</string>
    <string name="xsmrenz">请进行实名认证</string>
    <string name="gxts">更新提示</string>
    <string name="isgx">检测到有新版本是否立即更新</string>
    <string name="gaode">高德地图</string>
    <string name="baidu">百度地图</string>
    <string name="tengxun">腾讯地图</string>
    <string name="noanzhuangtx">您尚未安装腾讯地图</string>
    <string name="noanzhuanggd">您尚未安装高德地图</string>
    <string name="noanzhuangbd">您尚未安装百度地图</string>
    <string name="donlaod">下载完成</string>
    <string name="donlaodez">下载中</string>
    <string name="donlaodsb">下载失败</string>
    <string name="gouyx">去允许</string>
    <string name="selecteapp">点击允许才可以使用我们的app哦</string>
    <string name="selectetxl">点击允许才可以使用我们的通讯录功能</string>
    <string name="getqxsb">获取联系人权限失败</string>

    <string name="yxqxhzs">请允许拨号权限后再试</string>
    <string name="viedoupz">视频上传中请稍候</string>
    <string name="viedoucg">视频上传成功</string>
    <string name="vidono5">视频不能大于5MB</string>
    <string name="daohangdz">导航地址不能为空</string>
    <string name="donlaodnos">下载地址有误</string>
    <string name="goset">去设置</string>
    <string name="plesetzqx">请在“通知”中打开通知权限</string>
    <string name="tishi">提示</string>
    <string name="outsb">导出失败</string>

    <string name="bwhstr">编委会</string>
    <string name="jpxystr">家谱序言</string>
    <string name="xslystr">姓氏来源</string>
    <string name="jgjxstr">家规家训</string>
    <string name="shixibiaostr">世系表</string>
    <string name="rwzstr">人物传</string>
    <string name="dsjstr">大事记</string>
    <string name="hjstr">后记</string>
    <string name="logingsx">登陆失效</string>
    <string name="sccg">上传成功</string>
    <string name="yczwxcf">联系人已存在无需重复添加</string>
    <string name="newbb">当前已是最新版本</string>
    <string name="xzhd">请选择要参加的活动</string>
    <string name="xzfm">请先选择封面</string>
    <string name="gpswkq">系统检测到未开启GPS定位服务,请开启</string>
    <string name="bccg">保存成功</string>
    <string name="bcsb">保存失败</string>
    <string name="zbid">直播ID:</string>
    <string name="starttime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="qsrphone">请输入手机号</string>
    <string name="qsrdtpwd">请输入手机动态密码</string>

    <string name="qsrpwd">请输入密码</string>
    <string name="zhgscw">账号格式错误</string>
    <string name="xgcg">修改成功</string>
    <string name="xgsb">修改失败</string>
    <string name="xzcfm">选择此封面</string>
    <string name="logingcg">登录成功</string>
    <string name="zc">注册</string>
    <string name="dxksdl">短信快捷登录</string>
    <string name="qsrndpwd">请输入您的密码</string>
    <string name="ljlogin">立即登录</string>
    <string name="wjpwd">忘记密码?</string>
    <string name="syqtloging">使用其他登录方式</string>
    <string name="wxdl">微信</string>
    <string name="ksty">快速体验</string>
    <string name="qqrpwd">请确认您的密码</string>
    <string name="startty">开始体验</string>
    <string name="qxz">请选择</string>
    <string name="qrsxm">请输入姓名</string>
    <string name="qxsctp">请先上传图片</string>
    <string name="czcg">操作成功</string>
    <string name="zscg">赠送成功</string>
    <string name="yebz">余额不足</string>
    <string name="qcksl">请查看数量</string>
    <string name="qxzlw">请选择礼物</string>
    <string name="ysys">一生一世</string>
    <string name="wan">我爱你</string>
    <string name="ybb">要抱抱</string>
    <string name="yqsl">一切顺利</string>
    <string name="xn">想你</string>
    <string name="sqsm">十全十美</string>
    <string name="yxyy">一心一意</string>
    <string name="zbname">主播名称</string>
    <string name="wsmqsd">未实名认证,请先到个人中心进行实名认证</string>
    <string name="shzqnxdd">审核中,请耐心等待</string>
    <string name="rzwtg">认证未通过请到个人中心重新认证</string>
    <string name="zbtylm">主播同意了你的连麦pk申请</string>
    <string name="zbjjlm">主播拒绝了你的连麦pk申请</string>
    <string name="qxznlwzb">请选择你要送礼物的主播</string>
    <string name="zuo">左</string>
    <string name="you">右</string>
    <string name="zwzbqsh">暂无主播,请稍候</string>
    <string name="qxzsl">请选择数量</string>
    <string name="lmqq">连麦请求</string>
    <string name="nsdzblm">你收到了主播的连麦请求</string>
    <string name="zbytb">主播已经停播了哦</string>
    <string name="dqzblmz">当前主播正在连麦中没有空闲位置了</string>
    <string name="jg">警告</string>
    <string name="sftc">是否退出直播间</string>
    <string name="sdlmqq">收到连麦请求</string>
    <string name="nsdlyh">你收到了用户</string>
    <string name="dlmqq">的连麦请求</string>
    <string name="jj">拒绝</string>
    <string name="ty">同意</string>
    <string name="isjsdqth">您是否要结束当前通话,并退出房间？</string>
    <string name="iscz">您当前剩余通话时间不足五分钟是否进行充值？</string>
    <string name="cz1">充值</string>
    <string name="isgm30">是否立即购买30分钟通话时长</string>
    <string name="startzb">开始直播</string>
</resources>
