<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/share_log"
            android:textColor="#fff"
            android:textSize="5dp" />

        <View
            style="@style/HorizontalDivider"
            android:layout_alignParentBottom="true" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="#fff0"
            android:textSize="4dp" />


        <TextView
            android:id="@+id/share"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:text="@string/share"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:textColor="#3700FF"
            android:textSize="4dp"
            />


    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </android.support.v7.widget.RecyclerView>

</LinearLayout>