<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/dp_27"
    android:layout_height="match_parent">


  <RelativeLayout
      android:id="@+id/retitle"
      android:background="@drawable/dlbg"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dp_180">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/zc"
          android:layout_marginTop="@dimen/dp_10"
          android:layout_alignParentRight="true"
          android:textStyle="bold"
          android:textColor="@color/white"
          android:id="@+id/registtext"
          android:textSize="18sp"
          android:layout_marginRight="@dimen/dp_10"
          />
  </RelativeLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_marginTop="@dimen/dp_130"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_330"
        card_view:cardCornerRadius="8dp"
        android:paddingTop="@dimen/dp_5"
        card_view:contentPadding="8dp"
        android:layout_height="@dimen/dp_280">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_alignParentRight="true"
               android:layout_width="wrap_content"
               android:layout_marginRight="@dimen/dp_10"
               android:textColor="@color/black"
               android:textSize="15sp"
               android:id="@+id/phone_login"
               android:layout_height="wrap_content"
               android:text="@string/dxksdl"
               />

       </RelativeLayout>
            <LinearLayout
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_13"
                android:background="@color/edcolor"
                android:layout_width="@dimen/dp_300"
                android:orientation="horizontal"
                android:layout_height="@dimen/dp_40">
                <ImageView
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:src="@drawable/phone"
                    />
                <EditText
                    android:id="@+id/ed_phone"
                    android:layout_width="@dimen/dp_224"
                    android:numeric="integer"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_height="match_parent"
                    android:maxLength="11"
                    android:digits="1234567890"
                    android:background="@null"
                    android:imeOptions="actionSend"
                    android:singleLine="true"
                    android:hint="@string/qsrndpwd" />

            </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dp_15"
            android:background="@color/edcolor"
            android:layout_width="@dimen/dp_300"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="horizontal"
            android:layout_height="@dimen/dp_40">
            <ImageView
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_20"
                android:src="@drawable/pwd"
                />
            <EditText
                android:id="@+id/ed_pwd"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="@dimen/dp_224"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/qsrndpwd" />

        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_below="@id/liner"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_310"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_height="wrap_content"
        android:text="@string/ljlogin"
        android:id="@+id/start_loging"
        android:textSize="20sp"
        android:background="@drawable/myloginbtnshape"
        android:textColor="@color/white_color"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_below="@id/start_loging"
             android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="@string/wjpwd"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:id="@+id/wang"
            android:layout_marginTop="@dimen/dp_10"
            />

    </RelativeLayout>
</android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cardview"
        android:text="@string/syqtloging"
        android:textColor="#9c898b"
        android:layout_marginTop="@dimen/dp_40"
        android:textSize="16sp"
        android:id="@+id/more"
        />

    <RelativeLayout
        android:layout_below="@id/more"
        android:id="@+id/wxliner"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dp_125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/dp_28"
            android:src="@drawable/wx1"
            android:layout_centerHorizontal="true"
            android:id="@+id/wximg"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wxdl"
            android:layout_centerHorizontal="true"
            android:textColor="@color/garys"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_below="@+id/wximg"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_below="@id/more"
        android:layout_toRightOf="@id/wxliner"
        android:orientation="vertical"
        android:id="@+id/ks_loging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/dp_28"
            android:layout_centerHorizontal="true"
            android:layout_height="@dimen/dp_28"
            android:id="@+id/jby"
            android:src="@drawable/ksty"
            />
        <TextView
            android:layout_marginTop="@dimen/dp_5"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/jby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ksty"
            android:textColor="@color/garys"
            />

    </RelativeLayout>


</RelativeLayout>